--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	</head>
 
 	<body>
-<p>test</p>
+<h1> Dit is de homepagina</h1>
+        <h2>ondertitel</h2>
+        <p>test test test</p>
 	</body>
 </html>
