--- a/index.html
+++ b/index.html
@@ -1,15 +1,58 @@
 <!doctype html>
-
 <html>
-	<head>
-		<title>Lisa Van Wesemael</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="initial-scale=1.0">
-	</head>
 
-	<body>
-<h1> Dit is de homepagina</h1>
-        <h2>ondertitel</h2>
-        <p>test test test</p>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <title>Over mezelf</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,
+minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes">
+    <link href="browserreset.css" type="text/css" rel="stylesheet">
+    <link href="css/overmijzelf.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,400i,700" rel="stylesheet">
+
+</head>
+
+<body>
+    <header>
+        <div id="intro">Hi, I'm Lisa.<br>I'm a future graphic designer.<br>If you want to see what I've already made or you just want to know more about me, then just keep scrolling.</div>
+
+    </header>
+
+    <nav class="nav">
+        <div class="opacity">
+            <a href="#"> <img src="afbeeldingen/pijltje.png" alt="menu" height="20px"></a>
+            <ul>
+                <li><a href="#portfolio">portfolio</a></li>
+                <li><a href="#over_mezelf">about me</a></li>
+                <li><a href="#later">future</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="content">
+        <h2 id="portfolio">Portfolio</h2>
+        <p>Here are some things I was realy proud of in my first year of Graphic Media Design. I was always very excited of making them and had a lot of fun. But sometimes, I was also a bit frustrated</p>
+        <p>I hope you enjoy them as much as I did.</p>
+        <div class="over_mezelf">
+            <h2 id="over_mezelf">About me</h2>
+            <p>Some general facts about myself:</p>
+            <ul style="list-style-type:square">
+                <li>I was born on the 23<sup>th</sup> of April in 1997</li>
+                <li>My hometown is Lokeren (and I love it)</li>
+                <li>I like spending time with my <strong>family</strong></li>
+                <li>I really care about the wellbeing of my nails (really they are <strong>superimportant</strong> to me)</li>
+            </ul>
+            <p>A few years ago, I started my higher education with the thought that I wanted to be a programmer. Unfortunately, I realized that I was missing something, I wasn't as happy as I would have liked and my motivation to complete my education was dropping <strong>fast</strong>. So I began thinking why this was the case, I quickly realized I needed to be able to express myself. So my search began to find something where I could do exactly that.</p>
+        </div>
+        <div class="later">
+            <h2 id="later">My future</h2>
+            <p>I don't have my whole futere planned yet, and I don't think I ever will. That's part of the <strong>fun</strong>. I am very hopeful that I will find a job I will love for the rest of my carrier I just hope that everything works out.</p>
+        </div>
+    </div>
+    <footer id="footer">
+        <p>&copy;Lisa Van Wesemael 2018</p>
+    </footer>
+</body>
+
+
 </html>
