--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,
 minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes">
     <link href="browserreset.css" type="text/css" rel="stylesheet">
-    <link href="css/overmijzelf.css" type="text/css" rel="stylesheet">
+    <link href="css/over_mijzelf.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,400i,700" rel="stylesheet">
 
 </head>
