--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes">
 
 <body>
     <header>
-        <div id="intro">Hi, I'm Lisa.<br>I'm a future graphic designer.<br>If you want to see what I've already made or you just want to know more about me, then just keep scrolling.</div>
+        <div id="intro">Hi, I'm Lisa.<br>I'm a future graphic designer.<br>If you want to see what I've already made or you just want to know more about me, then keep on scrolling.</div>
 
     </header>
 
@@ -23,30 +23,48 @@ minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes">
             <a href="#"> <img src="afbeeldingen/pijltje.png" alt="menu" height="20px"></a>
             <ul>
                 <li><a href="#portfolio">portfolio</a></li>
-                <li><a href="#over_mezelf">about me</a></li>
-                <li><a href="#later">future</a></li>
+                <li><a href="#about_me">about me</a></li>
+                <li><a href="#future">future</a></li>
             </ul>
         </div>
     </nav>
 
     <div class="content">
-        <h2 id="portfolio">Portfolio</h2>
-        <p>Here are some things I was realy proud of in my first year of Graphic Media Design. I was always very excited of making them and had a lot of fun. But sometimes, I was also a bit frustrated</p>
-        <p>I hope you enjoy them as much as I did.</p>
-        <div class="over_mezelf">
-            <h2 id="over_mezelf">About me</h2>
+        <div class="portfolio">
+            <h2 id="portfolio">Portfolio</h2>
+            <p id="introPort">Here are some things I was realy proud of in my first year of Graphic Media Design. I was always very excited of making them and had a lot of fun. But sometimes, I was also a bit frustrated. Which is normal because I always want to get it right, even if that means starting over and over again.</p>
+            <p id='introPort'>I hope you enjoy them as much as I do.</p>
+            <div id="opdracht"> <img src="afbeeldingen/compositie.png" id="compositie" />
+                <p id="omschrijving">This was my very first assignment, we needed to make a good looking composition with only a couple of shapes and one accent colour. After some trial and error, I came up with this shape that looked a little bit like a bird. I turned it in different directions and made the composition you see here. </p>
+            </div>
+            <div id="opdracht"><img src="afbeeldingen/stad.png" id="stad" />
+                <p id="omschrijving">This is a city, made in an isometric grid. I choose to keep it simple, with only a couple of colours. This way, it had the industrial look I was going for. </p>
+            </div>
+            <div id="opdracht"> <img src="afbeeldingen/logo.png" id="logo" />
+                <p id="omschrijving">With this assignment, I discovered my first real problem. I don't like to use existing fonts, and unfortunately for me, we were meant to use them. I didn't think it was so important so I created my own. As a result, the teachers found it to complex so I remade it and this was the result.</p>
+            </div>
+            <div id="opdracht"> <img src="afbeeldingen/antarcticaLandschap.jpg" id="foto" />
+                <img src="afbeeldingen/landschap.png" id="landschap" />
+                <p id="omschrijving">This was my absolute favorite assignment of the semester. We had to stylize a landscape, using any shapes or forms we like. I chose this Arctic landscape with a few penguins and turned it into this. I really liked the outcome although I had some difficulties to choose the right blues.</p>
+            </div>
+            <div id="opdracht"><img src="afbeeldingen/poster.png" id="poster" />
+                <p id="omschrijving">As assignment for our exam, we had to make a poster for a fictive event. We even had to come up with a title and incorporate a picture of something that had to do with interiordesign. I eventually went for a very minimalistic kitchen with red and black.</p>
+            </div>
+        </div>
+        <div class="about_me">
+            <h2 id="about_me">About me</h2>
             <p>Some general facts about myself:</p>
             <ul style="list-style-type:square">
                 <li>I was born on the 23<sup>th</sup> of April in 1997</li>
-                <li>My hometown is Lokeren (and I love it)</li>
-                <li>I like spending time with my <strong>family</strong></li>
-                <li>I really care about the wellbeing of my nails (really they are <strong>superimportant</strong> to me)</li>
+                <li>My hometown is Lokeren (and I love it) but I was actually born in Ghent</li>
+                <li>I like spending time with my <strong>family</strong> and going on little trips with them</li>
+                <li>I really care about the wellbeing of my nails (really they are <strong>superimportant</strong> to me) because I like to do some nail art from time to time</li>
             </ul>
             <p>A few years ago, I started my higher education with the thought that I wanted to be a programmer. Unfortunately, I realized that I was missing something, I wasn't as happy as I would have liked and my motivation to complete my education was dropping <strong>fast</strong>. So I began thinking why this was the case, I quickly realized I needed to be able to express myself. So my search began to find something where I could do exactly that.</p>
         </div>
-        <div class="later">
-            <h2 id="later">My future</h2>
-            <p>I don't have my whole futere planned yet, and I don't think I ever will. That's part of the <strong>fun</strong>. I am very hopeful that I will find a job I will love for the rest of my carrier I just hope that everything works out.</p>
+        <div class="future">
+            <h2 id="future">My future</h2>
+            <p>I don't have my whole future planned yet, and I don't think I ever will. That's part of the <strong>fun</strong>. I am very hopeful that I will find a job I will love until I have to retire. I just hope that everything works out and that I have a lot of fun while working.</p>
         </div>
     </div>
     <footer id="footer">
