--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@ minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes">
 
 <body>
     <header>
-        <div id="intro">Hi, I'm Lisa.<br>I'm a future graphic designer.<br>If you want to see what I've already made or you just want to know more about me, then keep on scrolling.</div>
+        <div id="intro">
+            <p>Hi, I'm <strong>Lisa</strong>.<br>I'm a future graphic designer.<br>If you want to see what I've already made or you just want to know more about me, then<strong> keep on scrolling</strong>.</p>
+        </div>
 
     </header>
 
@@ -68,7 +70,8 @@ minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes">
         </div>
     </div>
     <footer id="footer">
-        <p>&copy;Lisa Van Wesemael 2018</p>
+
+        <p id="copy">&copy;Lisa Van Wesemael 2018</p>
     </footer>
 </body>
 
