toevoegenKaders en achtergrond

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes">
     <link href="browserreset.css" type="text/css" rel="stylesheet">
     <link href="css/over_mijzelf.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,400i,700" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
 </head>
 
@@ -52,6 +53,9 @@ minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes">
             <div id="opdracht"><img src="afbeeldingen/poster.png" id="poster" />
                 <p id="omschrijving">As assignment for our exam, we had to make a poster for a fictive event. We even had to come up with a title and incorporate a picture of something that had to do with interiordesign. I eventually went for a very minimalistic kitchen with red and black.</p>
             </div>
+            <div id="opdracht"><img src="afbeeldingen/collectief.png" id="ssd" /><img src="afbeeldingen/psychisch.png" id="ssd" /><img src="afbeeldingen/horeca.png" id="ssd" />
+                <p id="ssdOmschrijving">I've recently had the pleasure to design some new icons for the rebranding of the Social Service of the Belgium police (SSD).It thaught me that nothing is as good as you initially think. After looking at them again and again, I had a lot of versions to show them so they could vote which one they wanted. The three you see here, are the ones that they are actually using.</p>
+            </div>
         </div>
         <div class="about_me">
             <h2 id="about_me">About me</h2>
@@ -62,11 +66,14 @@ minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes">
                 <li>I like spending time with my <strong>family</strong> and going on little trips with them</li>
                 <li>I really care about the wellbeing of my nails (really they are <strong>superimportant</strong> to me) because I like to do some nail art from time to time</li>
             </ul>
-            <p>A few years ago, I started my higher education with the thought that I wanted to be a programmer. Unfortunately, I realized that I was missing something, I wasn't as happy as I would have liked and my motivation to complete my education was dropping <strong>fast</strong>. So I began thinking why this was the case, I quickly realized I needed to be able to express myself. So my search began to find something where I could do exactly that.</p>
+            <p>In High-school I studied applied sciences and modern languages. I liked it very much and learned a lot of usefull (and not so usefull) stuff. Everyone thought that I would become a scientist or a translater or something because that was in line with my education. <em>(They were in for quite the surprise.)</em> A few years ago, I started my higher education with the thought that I wanted to be a programmer. <br/> Unfortunately, I realized that I was missing something, I wasn't as happy as I would have liked and my motivation to complete my education was dropping <strong>fast</strong>. So I began thinking why this was the case, I quickly realized I needed to be able to express myself. So my search began to find something where I could do exactly that.</p>
+            <p>Here, in Graphic and Digital Media, I found what I was looking for. I can express myself and made a lot of good friends. I hope I will achieve my diploma in 2 years.</p>
+
         </div>
         <div class="future">
             <h2 id="future">My future</h2>
             <p>I don't have my whole future planned yet, and I don't think I ever will. That's part of the <strong>fun</strong>. I am very hopeful that I will find a job I will love until I have to retire. I just hope that everything works out and that I have a lot of fun while working.</p>
+
         </div>
     </div>
     <footer id="footer">
